--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,10 +1,14 @@
 branch-defaults:
   default:
-    environment: udagram-eyad-dev
+    environment: Udagramappeyad-env
+environment-defaults:
+  Udagramappeyad-env:
+    branch: null
+    repository: null
 global:
-  application_name: udagram-eyad
+  application_name: udagram-app-eyad
   branch: null
-  default_ec2_keyname: eyad_keypair
+  default_ec2_keyname: null
   default_platform: Node.js 14 running on 64bit Amazon Linux 2
   default_region: us-east-1
   include_git_submodules: true
