--- a/udagram/udagram-frontend/.env
+++ b/udagram/udagram-frontend/.env
@@ -1,7 +1,7 @@
 POSTGRES_USERNAME=eyad_postgres
 POSTGRES_PASSWORD=postgresdb
 POSTGRES_HOST=eyad-database-1.cyoqojbk66e7.us-east-1.rds.amazonaws.com
-POSTGRES_DB=eyad_postgres
+POSTGRES_DB=postgres
 AWS_BUCKET=arn:aws:s3:::elasticbeanstalk-us-east-1-344114408757
 AWS_REGION=us-east-2
 AWS_PROFILE=default
