--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -27,7 +27,6 @@
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
-    "typescript": "^3.5.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -55,7 +54,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
-    "tslint": "~5.12.0"
+    "tslint": "~5.12.0",
+    "typescript": "~3.4.5"
   },
   "description": "An Ionic project"
 }
